Add dropdown to card

--- a/src/main.global.less
+++ b/src/main.global.less
@@ -17,6 +17,7 @@ body {
   padding: 0;
   font-size: 14px;
   line-height: 16px;
+  color: @colorBlack;
   font-family: 'Roboto', sans-serif;
 }
 h1,.h1 {
